syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package beer.v2;

// The beer service definition.
service Beers {
  // Get a beer
	rpc GetBeer (BeerRequest) returns (BeerReply);
	rpc GetBeers (google.protobuf.Empty) returns (stream BeerReply);
}

// The request message containing the beer's name.
message BeerRequest {
	reserved "name";
	reserved 1;
	uint32 id = 2;
}

enum BeerType {
	Trappist = 0;
	BelgianBlond = 1;
	Stout = 2;
}

// The response message containing the beer.
message BeerReply {
	reserved 9;
	reserved "brewery";

	uint32 id = 1;
	string name = 2;
	double EBC = 3;
	double EBU = 4;
	double alcoholPercentage = 5;
	google.protobuf.Timestamp bestBefore = 6;
	BeerType beerType = 7;
	repeated string hops = 8;
	// string brewery = 9;
	// uint32 brewCompany = 9;
	// string brewery = 10;
}
